--- a/ProjectWorkSpace/DashboardEAR/.project
+++ b/ProjectWorkSpace/DashboardEAR/.project
@@ -3,6 +3,7 @@
 	<name>DashboardEAR</name>
 	<comment></comment>
 	<projects>
+		<project>TestWebservice</project>
 		<project>DashboardData</project>
 		<project>DashboardUtils</project>
 		<project>WebApp</project>
