--- a/ProjectWorkSpace/PassiveDisplayWebservice/.project
+++ b/ProjectWorkSpace/PassiveDisplayWebservice/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestWebservice</name>
+	<name>PassiveDisplayWebservice</name>
 	<comment></comment>
 	<projects>
 	</projects>
