Moved BA Problem into Workspace and ear for deployment

--- a/ProjectWorkSpace/DashboardEAR/.project
+++ b/ProjectWorkSpace/DashboardEAR/.project
@@ -3,9 +3,9 @@
 	<name>DashboardEAR</name>
 	<comment></comment>
 	<projects>
+		<project>BAProblems</project>
 		<project>DashboardData</project>
 		<project>DashboardUtils</project>
-		<project>WebApp</project>
 		<project>PassiveDisplayWebservice</project>
 	</projects>
 	<buildSpec>
