--- a/ProjectWorkSpace/DashboardData/.classpath
+++ b/ProjectWorkSpace/DashboardData/.classpath
@@ -11,6 +11,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/JSONGenerator"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DashboardUtils"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
