--- a/ProjectWorkSpace/DashboardEAR/.project
+++ b/ProjectWorkSpace/DashboardEAR/.project
@@ -6,6 +6,7 @@
 		<project>BAProblems</project>
 		<project>DashboardData</project>
 		<project>DashboardUtils</project>
+		<project>JSONGenerator</project>
 		<project>PassiveDisplayWebservice</project>
 	</projects>
 	<buildSpec>
